Estilização da tela HOME

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.2.4",
     "bootstrap": "^5.2.2",
+    "date-fns": "^2.29.3",
     "node-sass": "4.14.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
