--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/crypto-js": "^4.1.1",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.66",
     "@types/react": "^18.0.21",
@@ -16,7 +17,9 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.2.4",
     "bootstrap": "^5.2.2",
+    "crypto-js": "^4.1.1",
     "date-fns": "^2.29.3",
+    "date-fns-tz": "^1.3.7",
     "node-sass": "4.14.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
